@@ -1,3 +1,8 @@
+2001-02-10  Alan Modra  <alan@linuxcare.com.au>
+
+	* nm.c (print_symbol_info_bsd): Don't #ifdef inside printf in case
+	printf is a macro.
+
 2001-02-04  Philip Blundell  <philb@gnu.org>
 
 	* configure.in (OBJDUMP_DEFS): Match `arm*-*', not just `arm-*'.
